[tool.poetry]
name = "miso-nanopore-runscanner"
version = "0.1.0"
description = ""
authors = ["Peter Kruczkiewicz <peter.kruczkiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pendulum = "^2.1.2"
pod5 = "^0.3.1"
pydantic = ">=1.10.2"
rocketry = "^2.5.1"
sqlmodel = "^0.0.11"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
start = "miso_nanopore_runscanner.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
